# Automarket_Computer

miniloadCore/: CMakeLists.txt  package.xml  readme.md
miniloadCore/common/: CMakeLists.txt
miniloadCore/common/include/miniloadCore/common/: data_type.h  shelf_pos_config.h
miniloadCore/common/src/: data_type.cpp
miniloadCore/communication/: CMakeLists.txt
miniloadCore/communication/include/miniloadCore/communication/: can_drive.h
miniloadCore/communication/src/: can_application.cpp  can_drive.cpp
miniloadCore/examples/: CMakeLists.txt  main.cpp  motorFeedback.cpp  vel_control.cpp
miniloadCore/motor/: CMakeLists.txt
miniloadCore/motor/include/miniloadCore/motor/: doubleMotor.h  iMotor.h  motor_control.h
miniloadCore/motor/src/: doubleMotor.cpp  motor_control.cpp
